--- a/Services/Ordering/Ordering.Infrastructure/Ordering.Infrastructure.csproj
+++ b/Services/Ordering/Ordering.Infrastructure/Ordering.Infrastructure.csproj
@@ -8,5 +8,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Ordering.Application\Ordering.Application.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.2" />
+    <PackageReference Include="SendGrid" Version="9.25.3" />
+  </ItemGroup>
   
 </Project>
