--- a/Services/Ordering/Ordering.API/appsettings.json
+++ b/Services/Ordering/Ordering.API/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "OrderCNS": "Server=localhost;Database=OrderDb;User Id=admin;Password=admin;"
+  },
+  "EmailSettings": {
+    "APIKey": "",
+    "FromAddress": "ht10082001@gmail.com",
+    "FromName": "phuocleoceo"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
