--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,6 +99,30 @@ services:
       - discountdb
     ports:
       - "8003:80"
+  ################################################################################
+  orderdb:
+    image: mcr.microsoft.com/mssql/server:2017-latest
+    container_name: orderdb
+    environment:
+      SA_PASSWORD: "Admin1234"
+      ACCEPT_EULA: "Y"
+    ports:
+      - "1433:1433"
+    restart: always
+  ################################################################################
+  ordering.api:
+    image: orderingapi
+    container_name: ordering.api
+    build:
+      context: .
+      dockerfile: Services/Ordering/Ordering.API/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "ConnectionStrings:OrderCNS=Server=orderdb;Database=OrderDb;User Id=sa;Password=Admin1234"
+    depends_on:
+      - orderdb
+    ports:
+      - "8004:80"
 
 volumes:
   mongo_data:
