--- a/Services/Ordering/Ordering.API/appsettings.json
+++ b/Services/Ordering/Ordering.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "OrderCNS": "Server=localhost;Database=OrderDb;User Id=sa;Password=Admin1234;"
+    "OrderCNS": "Server=localhost;Database=OrderDb;User Id=sa;Password=@dmin1234;"
   },
   "EmailSettings": {
     "APIKey": "",
