--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,7 +104,7 @@ services:
     image: mcr.microsoft.com/mssql/server:2017-latest
     container_name: orderdb
     environment:
-      SA_PASSWORD: "Admin1234"
+      SA_PASSWORD: "@dmin1234"
       ACCEPT_EULA: "Y"
     ports:
       - "1433:1433"
@@ -118,7 +118,7 @@ services:
       dockerfile: Services/Ordering/Ordering.API/Dockerfile
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "ConnectionStrings:OrderCNS=Server=orderdb;Database=OrderDb;User Id=sa;Password=Admin1234"
+      - "ConnectionStrings:OrderCNS=Server=orderdb;Database=OrderDb;User Id=sa;Password=@dmin1234"
     depends_on:
       - orderdb
     ports:
